--- a/xdg/rivendell-rdalsaconfig.desktop
+++ b/xdg/rivendell-rdalsaconfig.desktop
@@ -4,7 +4,7 @@ Terminal=false
 Categories=Qt;KDE;Rivendell;
 Name=RDAlsaConfig
 GenericName=Rivendell ALSA Configuration
-Exec=rdalsaconfig --manage-daemons
+Exec=sudo rdalsaconfig --manage-daemons
 Icon=rivendell
 Type=Application
 Terminal=false
