--- a/xdg/rivendell-rddbconfig-root.desktop
+++ b/xdg/rivendell-rddbconfig-root.desktop
@@ -4,7 +4,7 @@ Terminal=false
 Categories=Qt;KDE;Rivendell;
 Name=RDDBConfig
 GenericName=Rivendell Database Management
-Exec=rddbconfig-root
+Exec=sudo rddbconfig
 Icon=rdadmin
 Type=Application
 Terminal=false
